# agentjj

./: .pre-commit-config.yaml  CLAUDE.md  Cargo.toml  README.md  blog.md
.agent/: .gitignore  manifest.toml
.agent/changes/: feature.toml  yllovvkmywprmtxowwtkkxwyyvntlxnw.toml
.agent/checkpoints/: before-testing.json  pre-push.json
.github/workflows/: ci.yml  release.yml
docs/: agent-start.md  agent-start.txt  deep-dive-field-observations.md  getting-started.md  index.html  skill.md  why-jj-failed.md
docs/plans/: 2026-02-14-agent-adherence-features-design.md
src/: change.rs  error.rs  intent.rs  lib.rs  main.rs  manifest.rs  repo.rs  symbols.rs
tests/: cli.rs  scenarios.rs
