# ABOUTME: Cargo manifest for agentjj - an agent-oriented porcelain for jj (Jujutsu)
# ABOUTME: Provides typed commits, manifests, intent-based transactions for AI agents

[package]
name = "agentjj"
version = "0.2.1"
edition = "2021"
description = "Agent-oriented porcelain for Jujutsu version control"
license = "MIT"
repository = "https://github.com/2389-research/agentjj"
homepage = "https://github.com/2389-research/agentjj"
readme = "README.md"
keywords = ["jujutsu", "jj", "vcs", "git", "agent"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
# CLI
clap = { version = "4", features = ["derive"] }

# Serialization
serde = { version = "1", features = ["derive"] }
toml = "0.8"
serde_json = "1"

# jj integration
jj-lib = "0.37"

# Async runtime (jj-lib needs this)
tokio = { version = "1", features = ["full"] }
futures = "0.3"

# Error handling
thiserror = "1"
anyhow = "1"

# Hashing for file integrity
sha2 = "0.10"
hex = "0.4"

# File watching / paths
camino = "1"  # UTF-8 paths
dirs = "5"
glob = "0.3"  # File pattern matching

# Code intelligence
tree-sitter = "0.24"
streaming-iterator = "0.1"
tree-sitter-python = "0.23"
tree-sitter-rust = "0.23"
tree-sitter-javascript = "0.23"
tree-sitter-typescript = "0.23"
pollster = "0.4.0"

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
predicates = "3"
regex = "1"
